# calc-python

./: README.md  pyproject.toml
calc/: calculator.py
tests/: test_calculator.py
var/: publishHTMLReport.groovy  publishHTMLReport.txt
