[tool.poetry]
name = "calc-python"
version = "0.1.0"
description = "The simple calculator"
authors = ["Rajan Patil <rajan.rb@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6.8"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
